--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -146,7 +146,7 @@ jobs:
           gcloud run deploy ${{ secrets.GCP_PROJECT_ID }}-analytics-snapshot --image $IMAGE_NAME --region us-central1 --platform managed --allow-unauthenticated --service-account=${{ secrets.GCLOUD_EMAIL }}
 
   linux:
-    name: "Builds Linux Native CLI"
+    name: "Build Linux Native CLI"
     runs-on: ubuntu-latest
     needs: [build]
     steps:
@@ -172,7 +172,7 @@ jobs:
           VERSION: ${{ github.event.release.tag_name }}
         run: |
           mkdir -p grails-linux-amd64-snapshot/bin
-          mv ./grails grails-linux-amd64-snapshot/bin
+          mv ./grails-cli/build/native/nativeCompile/grails grails-linux-amd64-snapshot/bin
           cp ./LICENSE grails-linux-amd64-snapshot/
           zip -r grails-linux-amd64-snapshot.zip ./grails-linux-amd64-snapshot
       - name: Upload Snapshot
@@ -182,7 +182,7 @@ jobs:
           name: grails-linux-amd64-snapshot
           path: grails-linux-amd64-snapshot.zip
   macos:
-    name: "Builds OS X Intel Native CLI"
+    name: "Build OS X Intel Native CLI"
     runs-on: macos-13
     needs: [build]
     steps:
@@ -218,7 +218,7 @@ jobs:
           name: grails-darwin-amd64-snapshot
           path: grails-darwin-amd64-snapshot.zip
   macos-arm:
-    name: "Builds OS X Arm Native CLI"
+    name: "Build OS X Arm Native CLI"
     runs-on: macos-latest
     env:
       GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
@@ -256,7 +256,7 @@ jobs:
           name: grails-darwin-aarch64-snapshot
           path: grails-darwin-aarch64-snapshot.zip
   windows:
-    name: "Builds Windows Native CLI"
+    name: "Build Windows Native CLI"
     runs-on: windows-latest
     needs: [build]
     steps:
