--- a/.github/workflows/sdkman.yml
+++ b/.github/workflows/sdkman.yml
@@ -1,4 +1,4 @@
-name: Release to SDKMan
+name: "Release to SDKMan"
 on:
   workflow_dispatch:
     inputs:
@@ -11,24 +11,23 @@ jobs:
     permissions:
       contents: read
     steps:
-      - name: Checkout repository
+      - name: "📥 Checkout repository"
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GH_TOKEN }}
           ref: v${{ github.event.inputs.version }}
-      - name: Set up JDK
+      - name: "☕️ Setup JDK"
         uses: actions/setup-java@v4
         with:
-          distribution: 'adopt'
-          java-version: '11'
-      - name: Grails SDK Minor Release
-        uses: gradle/gradle-build-action@v3
-        with:
-          arguments: sdkMinorRelease
+          distribution: 'temurin'
+          java-version: '17'
+      - name: "🐘 Setup Gradle"
+        uses: gradle/actions/setup-gradle@v4
+      - name: "🚀 Grails SDK Minor Release"
+        run: ./gradlew sdkMinorRelease
         env:
           GVM_SDKVENDOR_KEY: ${{ secrets.GVM_SDKVENDOR_KEY }}
           GVM_SDKVENDOR_TOKEN: ${{ secrets.GVM_SDKVENDOR_TOKEN }}
-      - name: Set output
+      - name: "Set output"
         id: set_output
         run: |
           echo ::set-output name=release_version::$(cat $GITHUB_OUTPUT)
