--- a/grails-forge-core/src/main/resources/pom.xml
+++ b/grails-forge-core/src/main/resources/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>org.grails</groupId>
             <artifactId>grails-gradle-plugin</artifactId>
-            <version>6.2.1</version>
+            <version>6.2.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.grails.plugins</groupId>
