ci: graalvm +version -distribution
Test tip from https://github.com/graalvm/setup-graalvm/issues/105#issuecomment-2352562370

--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -156,8 +156,8 @@ jobs:
         uses: graalvm/setup-graalvm@v1
         with:
           java-version: '11'
-          distribution: 'graalvm-community'
           components: 'native-image'
+          version: '22.3.3'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: "🐘 Setup Gradle"
         uses: gradle/actions/setup-gradle@v4
@@ -192,8 +192,8 @@ jobs:
         uses: graalvm/setup-graalvm@v1
         with:
           java-version: '11'
-          distribution: 'graalvm-community'
           components: 'native-image'
+          version: '22.3.3'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: "🐘 Setup Gradle"
         uses: gradle/actions/setup-gradle@v4
@@ -230,8 +230,8 @@ jobs:
         uses: graalvm/setup-graalvm@v1
         with:
           java-version: '11'
-          distribution: 'graalvm-community'
           components: 'native-image'
+          version: '22.3.3'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: "🐘 Setup Gradle"
         uses: gradle/actions/setup-gradle@v4
@@ -266,8 +266,8 @@ jobs:
         uses: graalvm/setup-graalvm@v1
         with:
           java-version: '11'
-          distribution: 'graalvm-community'
           components: 'native-image'
+          version: '22.3.3'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: "🐘 Setup Gradle"
         uses: gradle/actions/setup-gradle@v4
