--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -236,9 +236,9 @@ jobs:
         uses: graalvm/setup-graalvm@v1
         with:
           java-version: '11'
-          distribution: 'graalvm-community'
           native-image-musl: 'true'
           components: 'native-image'
+          version: '22.3.3'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: "🐘 Setup Gradle"
         uses: gradle/actions/setup-gradle@v4
@@ -281,8 +281,8 @@ jobs:
         uses: graalvm/setup-graalvm@v1
         with:
           java-version: '11'
-          distribution: 'graalvm-community'
           components: 'native-image'
+          version: '22.3.3'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: "🐘 Setup Gradle"
         uses: gradle/actions/setup-gradle@v4
@@ -325,8 +325,8 @@ jobs:
         uses: graalvm/setup-graalvm@v1
         with:
           java-version: '11'
-          distribution: 'graalvm-community'
           components: 'native-image'
+          version: '22.3.3'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: "🐘 Setup Gradle"
         uses: gradle/actions/setup-gradle@v4
@@ -369,8 +369,8 @@ jobs:
         uses: graalvm/setup-graalvm@v1
         with:
           java-version: '11'
-          distribution: 'graalvm-community'
           components: 'native-image'
+          version: '22.3.3'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: "🐘 Setup Gradle"
         uses: gradle/actions/setup-gradle@v4
