ci: Disable OSX Arm Native CLI
Graalvm cannot build Java 11 OSX Arm Native Image

Error: Failed to download graalvm-ce-java11-darwin-aarch64-22.3.3. Are you sure version: '22.3.3' and java-version: '11' are correct?

--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -218,6 +218,7 @@ jobs:
           name: grails-darwin-amd64-snapshot
           path: grails-darwin-amd64-snapshot.zip
   macos-arm:
+    if: false # Graalvm cannot build Java 11 OS X Arm Native Image
     name: "Build OS X Arm Native CLI"
     runs-on: macos-latest
     env:
