--- a/grails-forge-core/src/main/resources/pom.xml
+++ b/grails-forge-core/src/main/resources/pom.xml
@@ -20,12 +20,12 @@
         <dependency>
             <groupId>org.grails</groupId>
             <artifactId>grails-gradle-plugin</artifactId>
-            <version>6.1.2</version>
+            <version>7.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.grails.plugins</groupId>
             <artifactId>hibernate5</artifactId>
-            <version>8.1.0</version>
+            <version>9.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.grails.plugins</groupId>
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>org.grails.plugins</groupId>
             <artifactId>database-migration</artifactId>
-            <version>4.2.1</version>
+            <version>6.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.grails.plugins</groupId>
@@ -50,12 +50,12 @@
         <dependency>
             <groupId>org.asciidoctor.jvm.convert</groupId>
             <artifactId>asciidoctor-gradle-jvm</artifactId>
-            <version>4.0.0-alpha.1</version>
+            <version>4.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>6.2.5.Final</version>
+            <version>7.0.5.Final</version>
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
@@ -65,7 +65,7 @@
         <dependency>
             <groupId>org.grails.plugins</groupId>
             <artifactId>views-gradle</artifactId>
-            <version>3.2.3</version>
+            <version>4.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.grails.plugins</groupId>
@@ -125,17 +125,17 @@
         <dependency>
             <groupId>com.bertramlabs.plugins</groupId>
             <artifactId>asset-pipeline-grails</artifactId>
-            <version>4.3.0</version>
+            <version>5.0.1</version>
         </dependency>
         <dependency>
             <groupId>com.bertramlabs.plugins</groupId>
             <artifactId>asset-pipeline-gradle</artifactId>
-            <version>4.3.0</version>
+            <version>5.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.10.3</version>
+            <version>5.11.1</version>
         </dependency>
     </dependencies>
 </project>
