--- a/grails-forge-analytics-postgres/build.gradle
+++ b/grails-forge-analytics-postgres/build.gradle
@@ -20,7 +20,7 @@ dependencies {
     implementation 'com.google.cloud.sql:postgres-socket-factory:1.17.1'
     implementation "io.micronaut.sql:micronaut-jdbc-hikari"
     implementation 'io.micronaut.flyway:micronaut-flyway'
-    testCompileOnly "io.micronaut:micronaut-inject-groovy"
+    testCompileOnly "io.micronaut:micronaut-inject-groovy:$micronautVersion"
     testImplementation "io.micronaut:micronaut-http-client"
     testImplementation "org.testcontainers:postgresql"
     testImplementation "ch.qos.logback:logback-classic:1.5.6"
