--- a/test-core/build.gradle
+++ b/test-core/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     testImplementation project(":grails-cli")
     testImplementation "ch.qos.logback:logback-classic:1.5.6"
     testImplementation "io.micronaut.picocli:micronaut-picocli"
+    implementation "io.micronaut:micronaut-inject-groovy:$micronautVersion"
     generateConfig "info.picocli:picocli-codegen:${picocliVersion}"
 }
 
