--- a/grails-forge-core/src/main/resources/pom.xml
+++ b/grails-forge-core/src/main/resources/pom.xml
@@ -137,5 +137,10 @@
             <artifactId>junit-jupiter</artifactId>
             <version>5.11.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.micronaut</groupId>
+            <artifactId>micronaut-http-client</artifactId>
+            <version>4.6.6</version>
+        </dependency>
     </dependencies>
 </project>
