ensure grails-wrapper files exist in native grails-forge-cli builds

--- a/grails-forge-core/src/main/resources/META-INF/native-image/org.grails.forge/grails-forge-core/resource-config.json
+++ b/grails-forge-core/src/main/resources/META-INF/native-image/org.grails.forge/grails-forge-core/resource-config.json
@@ -3,6 +3,7 @@
     "includes": [
       {"pattern":"assets/.*$"},
       {"pattern":"gradle/.*$"},
+      {"pattern":"grails-wrapper/.*$"},
       {"pattern":"gsp/.*$"},
       {"pattern":"i18n/.*$"},
       {"pattern":".gitkeep"},
